@@ -1,5 +1,10 @@
+USER VISIBLE CHANGES BETWEEN ACE-6.1.8 and ACE-6.2.0
+====================================================
+
 USER VISIBLE CHANGES BETWEEN ACE-6.1.7 and ACE-6.1.8
 ====================================================
+
+. Small bug fixes
 
 USER VISIBLE CHANGES BETWEEN ACE-6.1.6 and ACE-6.1.7
 ====================================================
